--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: quizchallenge
-description: "A Flutter challeng project."
+description: "A Flutter quiz challenge project."
 publish_to: "none"
 
 version: 1.0.0+1
@@ -11,20 +11,32 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.3.0
-  drift: ^2.26.0
   provider: ^6.1.4
   google_fonts: ^6.2.1
   html_unescape: ^2.0.0
-
+  shared_preferences: ^2.5.3
   cupertino_icons: ^1.0.8
+  path: ^1.9.1
+  drift: ^2.26.0
+  sqlite3_flutter_libs: ^0.5.18
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  drift_dev: ^2.26.0
 
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/score.png
+    - assets/images/score_fail.png
+    - assets/images/score_success.png
     - assets/images/history.png
+    - assets/images/home.png
+    - assets/images/war.png
+    - assets/images/big_score_history.png
+    - assets/images/score_result.png
+    - assets/images/points.png
+    - assets/images/check.png
