--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,16 +17,20 @@ dependencies:
   shared_preferences: ^2.5.3
   cupertino_icons: ^1.0.8
   path: ^1.9.1
-  drift: ^2.26.0
-  sqlite3_flutter_libs: ^0.5.18
   path_provider: ^2.1.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  hive_generator: ^2.0.1
   build_runner: ^2.4.15
-  drift_dev: ^2.26.0
+  mocktail: ^1.0.4
+  integration_test:
+    sdk: flutter
+ 
 
 flutter:
   uses-material-design: true
